<?xml version="1.0"?>
<package format="2">
  <name>hcr_common_markers</name>
  <version>0.0.0</version>
  <description>This package contains the commonly used interactive markers in HCR lab.</description>
  <maintainer email="pengy25@cs.washington.edu">Yu-Tang Peng</maintainer>
  <author email="jstn@cs.washington.edu">Justin Huang</author>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/hcr_common_markers</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>interactive_markers</depend>
  <depend>transform_graph</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
